PR28098 Skip R_*_NONE relocation entries with zero r_sym without counting

PR gold/28098
	* reloc.cc (Track_relocs::advance): Skip R_*_NONE relocation entries
	with r_sym of zero without counting in advance method.